--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -19,19 +19,25 @@
   }
 
   &:hover {
-    transform: translateY(-3px);
+    transform: translateY(-4px);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
+
+  &:active {
+    transform: translateY(-2px);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
+    border-bottom-color: currentColor;
   }
 
   &__primary {
     background-color: $secondary-blue;
-    border: 1px solid $secondary-blue;
+    border-bottom: 1px solid $secondary-blue;
     color: $primary-blue;
 
     &:hover {
       background-color: $primary-blue;
       color: $white;
-      border: 1px solid $secondary-blue;
+      // border: 1px solid $secondary-blue;
     }
   }
 }
