--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ hr {
   .hero--container {
     padding: 3rem 0;
     display: grid;
-    grid-template-rows: 1fr min-content min-content;
+    grid-template-rows: minmax(min-content, 15rem) min-content min-content;
     grid-template-columns: minmax(min-content, max-content);
     grid-row-gap: 3rem;
     justify-content: center;
