--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -15,7 +15,7 @@
   &--container {
     padding: 3rem 0;
     display: grid;
-    grid-template-rows: 1fr min-content min-content;
+    grid-template-rows: minmax(min-content, 15rem) min-content min-content;
     grid-template-columns: minmax(min-content, max-content);
     grid-row-gap: 3rem;
     justify-content: center;
