--- a/sass/index.scss
+++ b/sass/index.scss
@@ -6,6 +6,7 @@
 
 @import "components/hero";
 @import "components/button";
+@import "components/resumed-products";
 
 @import "layout/navigation";
 @import "layout/main";
