--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Quanby</title>
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -25,41 +26,58 @@
     <div class="hero">
       <div id="particles-js">
       </div>
-      <div class="container">
         <div class="hero--container">
           <h1 class="hero--logo">Quanby</h1>
           <h2 class="hero--phrase">Are you prepared for <br>
             <span class="hero--phrase__strong">quantum revolution?</span>
           </h2>
           <a class="btn btn__primary hero__btn">Find out more</a>
+          <hr>
         </div>
-        <hr>
-      </div>
     </div>
 
 
     <div class="container">
       <main class="main-card">
-        <div class="container">
+        <!-- <div class="container"> -->
           <section class="resumed-products">
-            <div class="grid-container">
-              <h3 class="resumed-products--header">Our products</h3>
-              <div class="resumed-products--product">
-                Product 1
-              </div>
-              <div class="resumed-products--product">
-                Product 2
-              </div>
-              <div class="resumed-products--product">
-                Product 3
-              </div>
+            <h3 class="resumed-products--header heading-tertiary">Our products</h3>
+            <div class="resumed-products--product">
+              <h5>
+                <i class="fas fa-lock"></i><br>
+                Security
+              </h5>
+              <p>
+                We keep your company up to date with the most modern post-quantum cryptography technologies
+              </p>
+              <a class="btn btn__primary btn__small">+</a>
+            </div>
+            <div class="resumed-products--product">
+                <h5>
+                    <i class="fas fa-tools"></i><br>
+                    Personal development
+                  </h5>
+                  <p>
+                      Personalized solutions for every industry field, we make from your problems ours and solve them through quantum computing
+                  </p>
+                  <a class="btn btn__primary btn__small">+</a>
+            </div>
+            <div class="resumed-products--product">
+                <h5>
+                    <i class="fas fa-project-diagram"></i><br>
+                    Linear systems
+                  </h5>
+                  <p>
+                    We keep your company up to date with the most modern post-quantum cryptography technologies
+                  </p>
+                  <a class="btn btn__primary btn__small">+</a>
             </div>
           </section>
 
           <hr>
 
           <article class="article">
-            <h4>The quantum revolution</h4>
+            <h4 class="heading-quartiary">The quantum revolution</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
               dignissim,
               ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
@@ -83,7 +101,7 @@
 
           <section class="products">
             <article class="products--security">
-              <h4>Security</h4>
+              <h4 class="heading-quartiary">Security</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
                 dignissim,
                 ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
@@ -110,7 +128,7 @@
             </article>
 
             <article class="products--personal-dev">
-              <h4>Personal development</h4>
+              <h4 class="heading-quartiary">Personal development</h4>
               <p>Aliquam nec vestibulum enim. Etiam id felis ut mi faucibus iaculis. Nulla lobortis molestie massa ut
                 condimentum. Sed at vestibulum massa. Suspendisse nec dui risus. Proin ac ex non quam pulvinar tincidunt
                 vel
@@ -121,7 +139,7 @@
             </article>
 
             <article class="products--linear-systems">
-              <h4>Linear systems</h4>
+              <h4 class="heading-quartiary">Linear systems</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod est ut dui facilisis, et tempor
                 sapien
                 consequat. Vestibulum interdum quam non lobortis cursus. Nam finibus erat eget erat tempor aliquet.
@@ -132,7 +150,7 @@
               <img src="/img/calculator.svg" alt="Monitor displaying binary code">
             </article>
           </section>
-        </div>
+        <!-- </div> -->
 
       </main>
 
