--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,8 @@ hr {
   padding: 3rem 8rem; }
 
 .page {
-  background-color: #07274e; }
+  background-color: #07274e;
+  width: 100%; }
 
 #particles-js canvas {
   position: absolute;
@@ -34,8 +35,22 @@ hr {
   height: 100%;
   z-index: -1; }
 
+.heading-tertiary {
+  text-transform: uppercase;
+  display: block;
+  text-align: center; }
+
+.heading-tertiary {
+  font-size: 3rem;
+  font-weight: 500;
+  background-image: linear-gradient(to bottom, #07274e, #ABC0DA 200%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent; }
+
 .hero {
   position: relative;
+  grid-column: 1 / 4;
   height: 100vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 80%, #07274e 100%), url(../img/world.jpg);
   mix-blend-mode: lighten;
@@ -84,13 +99,7 @@ hr {
   transition: all 0.2s;
   cursor: pointer; }
 
-.btn:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-
 .btn:active {
-  transform: translateY(-2px);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   border-bottom-color: currentColor; }
 
 .btn__primary {
@@ -101,7 +110,53 @@ hr {
     background-color: #07274e;
     color: #ffffff; }
 
+.btn__small {
+  font-size: 1.8rem;
+  padding: 0 3rem; }
+
+.resumed-products {
+  padding-bottom: 4rem;
+  display: grid;
+  grid-template-columns: 1fr repeat(auto-fill, minmax(30rem, 1fr));
+  row-gap: 2rem; }
+  .resumed-products--header {
+    grid-column: 1 / 4; }
+  .resumed-products--product {
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    row-gap: 1rem;
+    align-items: start;
+    justify-items: center; }
+    .resumed-products--product h5 {
+      margin-top: .5rem;
+      margin-bottom: 1.2rem;
+      font-size: 1.6rem;
+      font-weight: 500;
+      line-height: 1.6;
+      text-transform: uppercase;
+      text-align: center;
+      background-image: linear-gradient(to bottom, #07274e, #ABC0DA 200%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent; }
+    .resumed-products--product h5 i::before {
+      background-image: linear-gradient(to bottom, #07274e, #ABC0DA 200%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      display: initial; }
+    .resumed-products--product p {
+      margin: 0 1rem;
+      text-align: center;
+      grid-row: 2 / 3;
+      font-weight: 500;
+      font-size: 1.4rem;
+      line-height: 1.4;
+      color: #626262; }
+    .resumed-products--product a {
+      margin-top: 1.5rem; }
+
 .navigation {
+  grid-column: 2 / 3;
   position: absolute;
   top: 0;
   left: 0;
@@ -127,9 +182,11 @@ hr {
       color: #ffffff; }
 
 .main-card {
+  grid-column: 2 / 3;
   background-color: #ffffff;
   position: relative;
   z-index: 1;
   border-radius: 3.6rem;
   margin-top: -15vh;
-  padding-top: 3rem; }
+  padding-top: 5rem;
+  padding: 4rem 5rem; }
