--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,6 +30,9 @@ hr {
 
 .page {
   background-color: $primary-blue;
+  width: 100%;
+  // display: grid;
+  // grid-template-columns: 4rem 1fr 4rem;
 }
 
 #particles-js canvas {
