--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -18,14 +18,7 @@
     cursor: pointer;
   }
 
-  &:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-  }
-
   &:active {
-    transform: translateY(-2px);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
     border-bottom-color: currentColor;
   }
 
@@ -39,5 +32,10 @@
       color: $white;
       // border: 1px solid $secondary-blue;
     }
+  }
+
+  &__small {
+    font-size: 1.8rem;
+    padding: 0 3rem;
   }
 }
