--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,8 +1,10 @@
 .main-card {
+  grid-column: 2 / 3;
   background-color: $white;
   position: relative;
   z-index: 1;
   border-radius: 3.6rem;
   margin-top: -15vh;
-  padding-top: 3rem;
+  padding-top: 5rem;
+  padding: 4rem 5rem;
 }
