--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,9 @@ body {
   box-sizing: border-box;
   height: 900rem;
   font-family: "Rubik", sans-serif;
-  background-color: #07274e; }
+  background-color: #07274e;
+  font-size: 1.5rem;
+  color: #818181; }
 
 hr {
   height: 5px;
@@ -20,8 +22,11 @@ hr {
   color: #ffffff;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 5%, #abc0da 50%, rgba(0, 0, 0, 0) 95%); }
 
+p {
+  margin-top: 2rem; }
+
 .container {
-  padding: 3rem 8rem; }
+  padding: 4rem 15rem; }
 
 .page {
   background-color: #07274e;
@@ -42,6 +47,14 @@ hr {
 
 .heading-tertiary {
   font-size: 3rem;
+  font-weight: 500;
+  background-image: linear-gradient(to bottom, #07274e, #ABC0DA 200%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent; }
+
+.heading-quartiary {
+  font-size: 2.5rem;
   font-weight: 500;
   background-image: linear-gradient(to bottom, #07274e, #ABC0DA 200%);
   background-clip: text;
@@ -155,6 +168,9 @@ hr {
     .resumed-products--product a {
       margin-top: 1.5rem; }
 
+.article {
+  padding: 4rem 0; }
+
 .navigation {
   grid-column: 2 / 3;
   position: absolute;
@@ -182,7 +198,6 @@ hr {
       color: #ffffff; }
 
 .main-card {
-  grid-column: 2 / 3;
   background-color: #ffffff;
   position: relative;
   z-index: 1;
