--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,6 +15,8 @@ body {
   height: 900rem;
   font-family: "Rubik", sans-serif;
   background-color: $primary-blue;
+  font-size: 1.5rem;
+  color: $dark-grey-2;
 }
 
 hr {
@@ -24,8 +26,12 @@ hr {
   background-image: linear-gradient(to right, rgba(0,0,0,0) 5%, rgba($secondary-blue, 1) 50%, rgba(0,0,0,0) 95%);
 }
 
+p {
+  margin-top: 2rem;
+}
+
 .container {
-  padding: 3rem 8rem;
+  padding: 4rem 15rem;
 }
 
 .page {
