--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,6 +7,7 @@
 @import "components/hero";
 @import "components/button";
 @import "components/resumed-products";
+@import "components/article";
 
 @import "layout/navigation";
 @import "layout/main";
