--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $primary-blue: #07274e;
 $secondary-blue: #ABC0DA;
+$ice-blue: #60B8FF;
 $white: #ffffff;
 $dark-grey-1: #626262;
 $dark-grey-2: #818181;
