--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,6 +8,8 @@
 @import "components/button";
 @import "components/resumed-products";
 @import "components/article";
+@import "components/products";
+@import "components/about";
 
 @import "layout/navigation";
 @import "layout/main";
