--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -3,7 +3,9 @@
   position: relative;
   z-index: 1;
   border-radius: 3.6rem;
+  // margin: 0 20rem;
+  max-width: 128rem;
+  margin: 0 auto;
   margin-top: -15vh;
-  padding-top: 5rem;
   padding: 4rem 5rem;
 }
