--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Quanby</title>
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -26,84 +27,85 @@
     <div class="hero">
       <div id="particles-js">
       </div>
-        <div class="hero--container">
-          <h1 class="hero--logo">Quanby</h1>
-          <h2 class="hero--phrase">Are you prepared for <br>
-            <span class="hero--phrase__strong">quantum revolution?</span>
-          </h2>
-          <a class="btn btn__primary hero__btn">Find out more</a>
-          <hr>
-        </div>
+      <div class="hero--container">
+        <h1 class="hero--logo">Quanby</h1>
+        <h2 class="hero--phrase">Are you prepared for <br>
+          <span class="hero--phrase__strong">quantum revolution?</span>
+        </h2>
+        <a class="btn btn__primary hero__btn">Find out more</a>
+        <hr>
+      </div>
     </div>
 
 
-    <div class="container">
       <main class="main-card">
         <!-- <div class="container"> -->
-          <section class="resumed-products">
-            <h3 class="resumed-products--header heading-tertiary">Our products</h3>
-            <div class="resumed-products--product">
-              <h5>
-                <i class="fas fa-lock"></i><br>
-                Security
-              </h5>
-              <p>
-                We keep your company up to date with the most modern post-quantum cryptography technologies
-              </p>
-              <a class="btn btn__primary btn__small">+</a>
-            </div>
-            <div class="resumed-products--product">
-                <h5>
-                    <i class="fas fa-tools"></i><br>
-                    Personal development
-                  </h5>
-                  <p>
-                      Personalized solutions for every industry field, we make from your problems ours and solve them through quantum computing
-                  </p>
-                  <a class="btn btn__primary btn__small">+</a>
-            </div>
-            <div class="resumed-products--product">
-                <h5>
-                    <i class="fas fa-project-diagram"></i><br>
-                    Linear systems
-                  </h5>
-                  <p>
-                    We keep your company up to date with the most modern post-quantum cryptography technologies
-                  </p>
-                  <a class="btn btn__primary btn__small">+</a>
-            </div>
-          </section>
+        <section class="resumed-products">
+          <h3 class="resumed-products--header heading-tertiary">Our products</h3>
+          <div class="resumed-products--product">
+            <h5>
+              <i class="fas fa-lock"></i><br>
+              Security
+            </h5>
+            <p>
+              We keep your company up to date with the most modern post-quantum cryptography technologies
+            </p>
+            <a class="btn btn__primary btn__small">+</a>
+          </div>
+          <div class="resumed-products--product">
+            <h5>
+              <i class="fas fa-tools"></i><br>
+              Personal development
+            </h5>
+            <p>
+              Personalized solutions for every industry field, we make from your problems ours and solve them through
+              quantum computing
+            </p>
+            <a class="btn btn__primary btn__small">+</a>
+          </div>
+          <div class="resumed-products--product">
+            <h5>
+              <i class="fas fa-project-diagram"></i><br>
+              Linear systems
+            </h5>
+            <p>
+              We keep your company up to date with the most modern post-quantum cryptography technologies
+            </p>
+            <a class="btn btn__primary btn__small">+</a>
+          </div>
+        </section>
 
-          <hr>
+        <hr>
 
-          <article class="article">
-            <h4 class="heading-quartiary">The quantum revolution</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
-              dignissim,
-              ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
-              Pellentesque
-              accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut, consequat
-              ante.
-              Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat nisi,
-              vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
-              mauris
-              erat, non tincidunt odio imperdiet quis.</p>
+        <article class="article">
+          <h4 class="heading-quartiary">The quantum revolution</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
+            dignissim,
+            ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
+            Pellentesque
+            accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut, consequat
+            ante.
+            Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat nisi,
+            vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
+            mauris
+            erat, non tincidunt odio imperdiet quis.</p>
 
-            <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
-              imperdiet.
-              Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
-              rutrum
-              eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
-              non
-              posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque tempus
-              rhoncus libero eget pharetra.</p>
-          </article>
+          <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
+            imperdiet.
+            Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
+            rutrum
+            eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
+            non
+            posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque tempus
+            rhoncus libero eget pharetra.</p>
+        </article>
 
-          <hr>
+        <hr>
 
-          <section class="products">
-            <article class="products--security">
-              <h4 class="heading-quartiary">Security</h4>
+        <section class="products">
+          <h4 class="heading-quartiary">Security</h4>
+          <article class="products--security">
+            <div class="products--content">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
                 dignissim,
                 ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
@@ -126,38 +128,44 @@
                 posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque
                 tempus
                 rhoncus libero eget pharetra.</p>
-              <img src="/img/binary-code.svg" alt="Monitor displaying binary code">
-            </article>
+            </div>
+            <img class="products--image" src="/img/binary-code.svg" alt="Monitor displaying binary code">
+          </article>
 
-            <article class="products--personal-dev">
-              <h4 class="heading-quartiary">Personal development</h4>
-              <p>Aliquam nec vestibulum enim. Etiam id felis ut mi faucibus iaculis. Nulla lobortis molestie massa ut
-                condimentum. Sed at vestibulum massa. Suspendisse nec dui risus. Proin ac ex non quam pulvinar tincidunt
-                vel
-                at leo. Curabitur eu nunc mollis, vestibulum odio eget, vulputate diam. Aliquam ut massa augue. Nunc a
-                blandit sem, sed interdum est. In euismod rutrum elementum.</p>
+          <h4 class="heading-quartiary align-right">Personal development</h4>
+          <article class="products--personal-dev align-right">
+            <p>Aliquam nec vestibulum enim. Etiam id felis ut mi faucibus iaculis. Nulla lobortis molestie massa ut
+              condimentum. Sed at vestibulum massa. Suspendisse nec dui risus. Proin ac ex non quam pulvinar tincidunt
+              vel
+              at leo. Curabitur eu nunc mollis, vestibulum odio eget, vulputate diam. Aliquam ut massa augue. Nunc a
+              blandit sem, sed interdum est. In euismod rutrum elementum.</p>
 
-              <img src="/img/coding.svg" alt="Monitor displaying binary code">
-            </article>
+            <img class="products--image" src="/img/coding.svg" alt="Monitor displaying binary code">
+          </article>
 
-            <article class="products--linear-systems">
-              <h4 class="heading-quartiary">Linear systems</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod est ut dui facilisis, et tempor
-                sapien
-                consequat. Vestibulum interdum quam non lobortis cursus. Nam finibus erat eget erat tempor aliquet.
-                Etiam
-                vestibulum ipsum dolor, vitae ultrices nibh pellentesque a. Fusce in tempus magna, quis gravida orci. Ut
-                vulputate at tellus in vehicula. Ut a tincidunt sem, eu efficitur risus.</p>
+          <h4 class="heading-quartiary">Linear systems</h4>
+          <article class="products--linear-systems">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod est ut dui facilisis, et tempor
+              sapien
+              consequat. Vestibulum interdum quam non lobortis cursus. Nam finibus erat eget erat tempor aliquet.
+              Etiam
+              vestibulum ipsum dolor, vitae ultrices nibh pellentesque a. Fusce in tempus magna, quis gravida orci. Ut
+              vulputate at tellus in vehicula. Ut a tincidunt sem, eu efficitur risus.</p>
 
-              <img src="/img/calculator.svg" alt="Monitor displaying binary code">
-            </article>
-          </section>
+            <img class="products--image" src="/img/calculator.svg" alt="Monitor displaying binary code">
+          </article>
+        </section>
         <!-- </div> -->
 
       </main>
 
+    <div class="container">
       <section class="about">
-
+        <h2 class="heading-secondary">Who we are</h2>
+        <p class="about--content">
+          First brazilian quantum computing company, focused on developing and implementation of algorithms for quantum computers and cryptographical security services.
+        </p>
+        <a class="btn btn__primary hero__btn">Contact us</a>
       </section>
 
       <footer class="footer">
