--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,6 +32,7 @@ p {
 
 .container {
   padding: 4rem 15rem;
+  position: relative;
 }
 
 .page {
@@ -48,4 +49,19 @@ p {
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+#particles-js-2 {
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  top: 0;
+  left: 0;
+
+  -webkit-mask-image: linear-gradient(to bottom, $white, transparent 85%);
+  mask-image: linear-gradient(to top, $white, transparent 30%);
+
+  canvas {
+    z-index: -1;
+  }
 }
