--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,6 +2,7 @@
   &,
   &:link,
   &:visited {
+    display: inline-block;
     padding: 1.2rem 2.5rem;
 
     border: none;
@@ -13,7 +14,7 @@
     font-size: 1.6rem;
     text-decoration: none;
     text-transform: uppercase;
-
+    
     transition: all 0.2s;
     cursor: pointer;
   }
