--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,143 +38,163 @@
     </div>
 
 
-      <main class="main-card">
-        <!-- <div class="container"> -->
-        <section class="resumed-products">
-          <h3 class="resumed-products--header heading-tertiary">Our products</h3>
-          <div class="resumed-products--product">
-            <h5>
-              <i class="fas fa-lock"></i><br>
-              Security
-            </h5>
-            <p>
-              We keep your company up to date with the most modern post-quantum cryptography technologies
-            </p>
-            <a class="btn btn__primary btn__small">+</a>
-          </div>
-          <div class="resumed-products--product">
-            <h5>
-              <i class="fas fa-tools"></i><br>
-              Personal development
-            </h5>
-            <p>
-              Personalized solutions for every industry field, we make from your problems ours and solve them through
-              quantum computing
-            </p>
-            <a class="btn btn__primary btn__small">+</a>
-          </div>
-          <div class="resumed-products--product">
-            <h5>
-              <i class="fas fa-project-diagram"></i><br>
-              Linear systems
-            </h5>
-            <p>
-              We keep your company up to date with the most modern post-quantum cryptography technologies
-            </p>
-            <a class="btn btn__primary btn__small">+</a>
-          </div>
-        </section>
+    <main class="main-card">
+      <!-- <div class="container"> -->
+      <section class="resumed-products">
+        <h3 class="resumed-products--header heading-tertiary">Our products</h3>
+        <div class="resumed-products--product">
+          <h5>
+            <i class="fas fa-lock"></i><br>
+            Security
+          </h5>
+          <p>
+            We keep your company up to date with the most modern post-quantum cryptography technologies
+          </p>
+          <a class="btn btn__primary btn__small">+</a>
+        </div>
+        <div class="resumed-products--product">
+          <h5>
+            <i class="fas fa-tools"></i><br>
+            Personal development
+          </h5>
+          <p>
+            Personalized solutions for every industry field, we make from your problems ours and solve them through
+            quantum computing
+          </p>
+          <a class="btn btn__primary btn__small">+</a>
+        </div>
+        <div class="resumed-products--product">
+          <h5>
+            <i class="fas fa-project-diagram"></i><br>
+            Linear systems
+          </h5>
+          <p>
+            We keep your company up to date with the most modern post-quantum cryptography technologies
+          </p>
+          <a class="btn btn__primary btn__small">+</a>
+        </div>
+      </section>
 
-        <hr>
+      <hr>
 
-        <article class="article">
-          <h4 class="heading-quartiary">The quantum revolution</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
-            dignissim,
-            ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
-            Pellentesque
-            accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut, consequat
-            ante.
-            Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat nisi,
-            vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
-            mauris
-            erat, non tincidunt odio imperdiet quis.</p>
+      <article class="article">
+        <h4 class="heading-quartiary">The quantum revolution</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
+          dignissim,
+          ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
+          Pellentesque
+          accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut, consequat
+          ante.
+          Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat nisi,
+          vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
+          mauris
+          erat, non tincidunt odio imperdiet quis.</p>
 
-          <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
-            imperdiet.
-            Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
-            rutrum
-            eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
-            non
-            posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque tempus
-            rhoncus libero eget pharetra.</p>
+        <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
+          imperdiet.
+          Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
+          rutrum
+          eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
+          non
+          posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque tempus
+          rhoncus libero eget pharetra.</p>
+      </article>
+
+      <hr>
+
+      <section class="products">
+        <h4 class="heading-quartiary">Security</h4>
+        <article class="products--security">
+          <div class="products--content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
+              dignissim,
+              ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
+              Pellentesque
+              accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut,
+              consequat
+              ante.
+              Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat
+              nisi,
+              vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
+              mauris
+              erat, non tincidunt odio imperdiet quis.</p>
+
+            <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
+              imperdiet.
+              Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
+              rutrum
+              eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
+              non
+              posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque
+              tempus
+              rhoncus libero eget pharetra.</p>
+          </div>
+          <img class="products--image" src="/img/binary-code.svg" alt="Monitor displaying binary code">
         </article>
 
-        <hr>
+        <h4 class="heading-quartiary align-right">Personal development</h4>
+        <article class="products--personal-dev align-right">
+          <p>Aliquam nec vestibulum enim. Etiam id felis ut mi faucibus iaculis. Nulla lobortis molestie massa ut
+            condimentum. Sed at vestibulum massa. Suspendisse nec dui risus. Proin ac ex non quam pulvinar tincidunt
+            vel
+            at leo. Curabitur eu nunc mollis, vestibulum odio eget, vulputate diam. Aliquam ut massa augue. Nunc a
+            blandit sem, sed interdum est. In euismod rutrum elementum.</p>
 
-        <section class="products">
-          <h4 class="heading-quartiary">Security</h4>
-          <article class="products--security">
-            <div class="products--content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
-                dignissim,
-                ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
-                Pellentesque
-                accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut,
-                consequat
-                ante.
-                Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat
-                nisi,
-                vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
-                mauris
-                erat, non tincidunt odio imperdiet quis.</p>
+          <img class="products--image" src="/img/coding.svg" alt="Monitor displaying binary code">
+        </article>
 
-              <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
-                imperdiet.
-                Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
-                rutrum
-                eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
-                non
-                posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque
-                tempus
-                rhoncus libero eget pharetra.</p>
-            </div>
-            <img class="products--image" src="/img/binary-code.svg" alt="Monitor displaying binary code">
-          </article>
+        <h4 class="heading-quartiary">Linear systems</h4>
+        <article class="products--linear-systems">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod est ut dui facilisis, et tempor
+            sapien
+            consequat. Vestibulum interdum quam non lobortis cursus. Nam finibus erat eget erat tempor aliquet.
+            Etiam
+            vestibulum ipsum dolor, vitae ultrices nibh pellentesque a. Fusce in tempus magna, quis gravida orci. Ut
+            vulputate at tellus in vehicula. Ut a tincidunt sem, eu efficitur risus.</p>
 
-          <h4 class="heading-quartiary align-right">Personal development</h4>
-          <article class="products--personal-dev align-right">
-            <p>Aliquam nec vestibulum enim. Etiam id felis ut mi faucibus iaculis. Nulla lobortis molestie massa ut
-              condimentum. Sed at vestibulum massa. Suspendisse nec dui risus. Proin ac ex non quam pulvinar tincidunt
-              vel
-              at leo. Curabitur eu nunc mollis, vestibulum odio eget, vulputate diam. Aliquam ut massa augue. Nunc a
-              blandit sem, sed interdum est. In euismod rutrum elementum.</p>
+          <img class="products--image" src="/img/calculator.svg" alt="Monitor displaying binary code">
+        </article>
+      </section>
+      <!-- </div> -->
 
-            <img class="products--image" src="/img/coding.svg" alt="Monitor displaying binary code">
-          </article>
-
-          <h4 class="heading-quartiary">Linear systems</h4>
-          <article class="products--linear-systems">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod est ut dui facilisis, et tempor
-              sapien
-              consequat. Vestibulum interdum quam non lobortis cursus. Nam finibus erat eget erat tempor aliquet.
-              Etiam
-              vestibulum ipsum dolor, vitae ultrices nibh pellentesque a. Fusce in tempus magna, quis gravida orci. Ut
-              vulputate at tellus in vehicula. Ut a tincidunt sem, eu efficitur risus.</p>
-
-            <img class="products--image" src="/img/calculator.svg" alt="Monitor displaying binary code">
-          </article>
-        </section>
-        <!-- </div> -->
-
-      </main>
+    </main>
 
     <div class="container">
       <div id="particles-js-2"></div>
       <section class="about">
         <h2 class="heading-secondary">Who we are</h2>
         <p class="about--content">
-          First brazilian quantum computing company, focused on developing and implementation of algorithms for quantum computers and cryptographical security services.
+          First brazilian quantum computing company, focused on developing and implementation of algorithms for quantum
+          computers and cryptographical security services.
         </p>
-        <!-- <a class="btn btn__primary hero__btn">Contact us</a> -->
+        <a href="mailto:quanby.quantica@gmail.com" class="btn btn__primary">Contact us</a>
       </section>
-
-      <footer class="footer">
-
-      </footer>
-
     </div>
 
+
+    <footer class="footer">
+      <!-- <div class="footer--back-to-top">
+        <i class="fas fa-arrow-up"></i>
+      </div> -->
+      <div class="footer--logo">
+        Quanby
+      </div>
+      <hr>
+      <div class="footer--contact">
+        <a class="media" href="https://www.youtube.com">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <div class="footer--contact-info">
+          <a href="mailto:quanby.quantica@gmail.com" class="email">quanby.quantica@gmail.com</a><br>
+          <a href="tel:999999999" class="number">+55 (0XX) 9XXXX.XXXX</a>
+          <br><br>
+          <br>
+          <address>Florianópolis, Santa Catarina - Brasil</address>
+          <br><br>
+          <small class="copyright">&copy; designed by LUCAS MULLER.</small>
+        </div>
+      </div>
+    </footer>
   </div>
 
 
