--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,7 +12,6 @@ html {
 
 body {
   box-sizing: border-box;
-  height: 900rem;
   font-family: "Rubik", sans-serif;
   background-color: $primary-blue;
   font-size: 1.5rem;
@@ -54,9 +53,10 @@ p {
 #particles-js-2 {
   position: absolute;
   width: 100%;
-  height: 120%;
+  height: 140%;
   top: 0;
   left: 0;
+  z-index: 1;
 
   -webkit-mask-image: linear-gradient(to bottom, $white, transparent 85%);
   mask-image: linear-gradient(to top, $white, transparent 30%);
