--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,20 @@
 
 html {
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    // width < 1200?
+    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
+
+  @include respond(tab-port) {
+    // width < 900?
+    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12, 12/16
+  }
 }
 
 body {
@@ -22,7 +36,12 @@ hr {
   height: 5px;
   border: none;
   color: $white;
-  background-image: linear-gradient(to right, rgba(0,0,0,0) 5%, rgba($secondary-blue, 1) 50%, rgba(0,0,0,0) 95%);
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0) 5%,
+    rgba($secondary-blue, 1) 50%,
+    rgba(0, 0, 0, 0) 95%
+  );
 }
 
 p {
@@ -32,6 +51,10 @@ p {
 .container {
   padding: 4rem 15rem;
   position: relative;
+
+  @include respond(phone) {
+    padding: 2rem 5rem;
+  }
 }
 
 .page {
