--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -3,6 +3,10 @@
   margin: 8rem auto;
   max-width: 80rem;
   z-index: 2;
+
+  @include respond(phone) {
+    margin: 2rem auto;
+  }
   
   &--content {
     color: $white;
