--- a/sass/components/_resumed-products.scss
+++ b/sass/components/_resumed-products.scss
@@ -1,7 +1,7 @@
 .resumed-products {
   padding-bottom: 4rem;
   display: grid;
-  grid-template-columns: 1fr repeat(auto-fill, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   row-gap: 2rem;
 
   &--header {
