--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,11 +1,11 @@
 .navigation {
-  grid-column: 2 / 3;
   position: absolute;
   top: 0;
   left: 0;
   height: 20rem;
   width: 100%;
   z-index: 1;
+  padding-top: 2rem;
 
   background-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
   mix-blend-mode: soft-light;
@@ -13,7 +13,7 @@
   &--list {
     list-style: none;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
 
   }
@@ -22,6 +22,7 @@
     font-size: 1.6rem;
     text-transform: uppercase;
     padding: 1.5rem 3rem;
+    text-align: center;
   }
 
   &--link {
