--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
   <div class="page">
 
 
-    <nav class="navigation container">
+    <nav class="navigation">
       <ul class="navigation--list">
         <li class="navigation--item"><a href="#" class="navigation--link">About us</a></li>
         <li class="navigation--item"><a href="#" class="navigation--link">Our products</a></li>
@@ -40,8 +40,8 @@
 
     <main class="main-card">
       <!-- <div class="container"> -->
+      <h3 class="resumed-products--header heading-tertiary">Our products</h3>
       <section class="resumed-products">
-        <h3 class="resumed-products--header heading-tertiary">Our products</h3>
         <div class="resumed-products--product">
           <h5>
             <i class="fas fa-lock"></i><br>
