--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -12,7 +12,7 @@
     border-radius: 0;
     padding: 15rem 5rem;
     margin-top: -30vh;
-    -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-    clip-path: polygon(0 10vh, 100% 0, 100% 98%, 0 100%);
+    // -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
+    // clip-path: polygon(0 10vh, 100% 0, 100% 98%, 0 100%);
   }
 }
