--- a/public/css/style.concat.css
+++ b/public/css/style.concat.css
@@ -327,9 +327,7 @@ p {
     .main-card {
       border-radius: 0;
       padding: 15rem 5rem;
-      margin-top: -30vh;
-      -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-      clip-path: polygon(0 10vh, 100% 0, 100% 98%, 0 100%); } }
+      margin-top: -30vh; } }
 
 .footer {
   display: flex;
